# VertexAI

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt
configs/: env.yaml  featurestore.yaml  training.yaml
docs/: MLOps_Pipeline_Process.md
scripts/: build_push.sh  build_serving_container.sh  demo.sh
src/components/_template/: Dockerfile  requirements.txt
src/components/_template/src/: main.py
src/components/data_load/: Dockerfile  requirements.txt
src/components/data_load/src/: main.py
src/components/eval/: Dockerfile  requirements.txt
src/components/eval/src/: main.py
src/components/model_upload/: Dockerfile  requirements.txt
src/components/model_upload/src/: main.py
src/components/train/: Dockerfile
src/components/train/src/: main.py
src/data/: 01_prepare_bq.sql  02_build_features.sql  03_build_labels.sql  03_build_labels_churn.sql  04_build_train.sql  05_sanity_checks.sql  __init__.py  run_sql.py
src/featurestore/: __init__.py  create_feature_group.py  create_feature_view.py  create_online_store.py  fetch_features.py  sync_feature_view.py
src/pipelines/: __init__.py  compile.py  monitor.py  pipeline.py  run.py
src/pipelines/compiled/: churn_training_pipeline.json
src/serving/: Dockerfile  online_predict.py  serve.py
src/training/: deploy_endpoint.py  train.py  upload_model.py
